# Jamb

./: .todo  CMakeLists.txt  CMakeSettings.json
examples/: CMakeLists.txt  container_example.cpp  window_example.cpp
include/jamb/: event_loop.h  events.h  jamb.h  surface.h
include/jamb/events/: event_loop.h  events.h
include/jamb/graphics/: context.h
include/jamb/widgets/: base_widget.h  container.h  window.h
src/w32/: event_loop.cpp  surface.cpp  window.cpp
src/w32/events/: event_loop.cpp
src/w32/widgets/: window.cpp
src/widgets/: window.cpp
src/window/: window.h
